Version 2.0
Complete rewrite.
Added config files.
You can now specify servers in the servers.cfg.
You can also groups servers toghter.